--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class='slide-item'>
                     <div class="slide-content"> 
                         <h3>CSS is pretty good</h3>
-                        <a href="#">Read More</a>
+                        <p>Lorem ipsum dolor.</p>
                     </div>
                     <div class="slide-img"><img src="img/slider-img-01.jpg"></div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class='slide-item'>
                     <div class="slide-content"> 
                         <h3>CSS is Awesome</h3>
-                        <a href="#">Read More</a>
+                        <p>Lorem ipsum dolor.</p>
                     </div>
                     <div class="slide-img"><img src="img/slider-img-02.jpg"></div>
                 </div>
@@ -48,8 +48,8 @@
                 <input id='slide-3' name='slides' type='radio'>
                 <div class='slide-item'>
                     <div class="slide-content"> 
-                        <h3>I Love CSS</h3>
-                        <a href="#">Read More</a>
+                        <h3>CSS is so pretty</h3>
+                        <p>Lorem ipsum dolor.</p>
                     </div>
                     <div class="slide-img"><img src="img/slider-img-03.jpg"></div>
                 </div>
